# folo

./: .gitattributes  .gitconfig  .gitignore  AGENT.md  AGENTS.md  Cargo.toml  DEVELOPMENT.md  LICENSE  PSScriptAnalyzerSettings.psd1  README.md  RELEASING.md  TODO  TODO.md  cargo-delta.toml  clippy.toml  codecov.yml  constants.env  debug_layouts  debug_layouts.rs  debug_test.rs  delta.toml  example_usage.rs  just_basics.just  just_constants.just  just_quality.just  just_quality_mutants.just  just_release.just  just_setup.just  just_testing.just  justfile  release-plz.toml  test_double_remove.rs  test_interior_mutability.rs  test_new_api.rs  test_oneshot_async.rs  test_oneshot_async_api.rs
crates/benchmark_utils/: Cargo.toml
crates/benchmark_utils/src/: lib.rs  threadpool.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: effects_of_memory.rs  effects_of_memory_windows.rs  variable_access.rs
crates/benchmarks/src/: lib.rs
crates/blind_pool/: Cargo.toml
crates/blind_pool/benches/: blind_basic.rs
crates/blind_pool/examples/: basic_usage.rs  blind_trait_objects.rs
crates/blind_pool/src/: builder.rs  lib.rs  pool.rs  pooled.rs
crates/cpulist/: CHANGELOG.md  Cargo.toml  README.md
crates/cpulist/examples/: cpulist_basic.rs  cpulist_stride.rs
crates/cpulist/src/: emit.rs  error.rs  lib.rs  parse.rs
crates/dataless_pool/: Cargo.toml
crates/dataless_pool/benches/: dp_basic.rs
crates/dataless_pool/examples/: dataless_basics.rs  drop_panic_demo.rs
crates/dataless_pool/src/: dropper.rs  lib.rs  pool.rs  slab.rs
crates/folo_ffi/: Cargo.toml  README.md
crates/folo_ffi/src/: lib.rs  native_buffer.rs
crates/folo_hw/: Cargo.toml
crates/folo_hw/benches/: cross_memory_region_channels.rs  cross_memory_region_fzmaps.rs  cross_memory_region_fzmaps_hash.rs  cross_memory_region_fzmaps_scalar.rs  cross_memory_region_hashmaps.rs  cross_memory_region_traffic.rs  effects_of_memory.rs
crates/folo_hw/examples/: even_processors_burn_cpu.rs  get_all_processors.rs  obey_job_limits_windows.rs  spawn_on_all_processors.rs  windows_processor_counts.rs
crates/folo_hw/src/: cpulist.rs  current.rs  hardware.rs  hardware_info.rs  hardware_tracker.rs  identifiers.rs  lib.rs  pal.rs  pinned_threads.rs  primitive_typrs.rs  processor.rs  processor_core.rs  processor_set.rs  processor_set_builder.rs  processor_set_builder_core.rs  processor_set_core.rs  processors.rs
crates/folo_state/: Cargo.toml
crates/folo_state/benches/: region_local.rs
crates/folo_state/src/: lib.rs  region_local.rs
crates/folo_utils/: Cargo.toml
crates/folo_utils/src/: lib.rs
crates/linked/: CHANGELOG.md  Cargo.toml  README.md
crates/linked/benches/: instance_per_thread.rs  instance_per_thread_sync.rs  instances.rs  linked.rs  per_access_static.rs  per_thread.rs  per_thread_static.rs  static_thread_local_arc.rs  static_thread_local_rc.rs
crates/linked/doc/: instance_per_thread_sync.mermaid  linked.mermaid  per_thread.mermaid
crates/linked/examples/: linked_basic.rs  linked_box.rs  linked_handle.rs  linked_std_box.rs  linked_thread_local_arc.rs  linked_thread_local_instance.rs
crates/linked/src/: __private.rs  block.rs  block_rc.rs  box.rs  constants.rs  family.rs  handle.rs  instance_per_thread.rs  instance_per_thread_sync.rs  lib.rs  macros.rs  object.rs  per_access.rs  per_access_static.rs  per_thread.rs  per_thread_static.rs  static_instance_per_thread.rs  static_instance_per_thread_sync.rs  static_instances.rs  thread_id_hash.rs  types.rs
crates/linked/tests/: linked_object.rs  smoke.rs
crates/linked_macros/: CHANGELOG.md  Cargo.toml
crates/linked_macros/src/: lib.rs
crates/linked_macros_impl/: CHANGELOG.md  Cargo.toml
crates/linked_macros_impl/src/: lib.rs  linked_object.rs  syn_helpers.rs
crates/many_cpus/: CHANGELOG.md  Cargo.toml  README.md
crates/many_cpus/benches/: effects_of_memory.rs  hardware_info.rs  hardware_tracker.rs  pal_windows.rs  processor_set_builder.rs
crates/many_cpus/examples/: get_all_processors.rs  get_all_processors_ignoring_quota.rs  obey_job_affinity_windows.rs  obey_job_limits_windows.rs  obey_job_resource_quota_windows.rs  observe_processor.rs  spawn_on_all_processors.rs  spawn_on_any_processors.rs  spawn_on_inherited_processors.rs  spawn_on_selected_processors.rs
crates/many_cpus/src/: clients.rs  cpulist.rs  functions.rs  hardware_info.rs  hardware_tracker.rs  lib.rs  pal.rs  primitive_types.rs  processor.rs  processor_set.rs  processor_set_builder.rs  resource_quota.rs
crates/many_cpus/tests/: job_limits_windows.rs
crates/many_cpus_benchmarking/: CHANGELOG.md  Cargo.toml  README.md
crates/many_cpus_benchmarking/benches/: many_cpus_harness_demo.rs
crates/many_cpus_benchmarking/src/: cache.rs  lib.rs  payload.rs  run.rs  work_distribution.rs
crates/memory_slab/: Cargo.toml
crates/memory_slab/examples/: memory_pool_basic.rs  memory_slab_basic.rs
crates/memory_slab/src/: lib.rs  pool.rs  slab.rs
crates/new_zealand/: Cargo.toml  README.md
crates/new_zealand/src/: lib.rs
crates/nm/: Cargo.toml  README.md
crates/nm/benches/: nm_observation.rs  nm_performance.rs
crates/nm/examples/: nm_basic.rs  nm_dynamic_name.rs  nm_dynamic_name_mt.rs  nm_histogram.rs  nm_push.rs
crates/nm/src/: constants.rs  data_types.rs  event.rs  event_builder.rs  lib.rs  observations.rs  observe.rs  publish_model.rs  pusher.rs  registries.rs  reports.rs
crates/once_event/: Cargo.toml
crates/once_event/benches/: once_event.rs
crates/once_event/examples/: basic_usage.rs
crates/once_event/src/: event.rs  lib.rs  pinned_rc.rs  with_ref_count.rs
crates/opaque_pool/: Cargo.toml  README.md
crates/opaque_pool/benches/: op_basic.rs
crates/opaque_pool/examples/: drop_panic_demo.rs  opaque_basic.rs  opaque_basics.rs  opaque_trait_objects.rs
crates/opaque_pool/src/: builder.rs  drop_policy.rs  dropper.rs  lib.rs  (+2 more)
crates/pinned_pool/: Cargo.toml  README.md
crates/region_cached/: CHANGELOG.md  Cargo.toml  README.md
crates/region_local/: CHANGELOG.md  Cargo.toml  README.md
crates/test_utils/: Cargo.toml
crates/testing/: Cargo.toml
(+272 files in other folders)
