[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Sander Saares <sander@saares.eu>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/folo-rs/folo"
rust-version = "1.85"

[profile.release]
# This ensures we have high quality data with proper stack traces when profiling.
debug = "line-tables-only"

[profile.mutants]
inherits = "dev"
# Speed up the build.
debug = "none"

[workspace.dependencies]
# The packages we publish.
cpulist = { version = "0.1.1", path = "crates/cpulist" }
folo_ffi = { version = "0.1.1", path = "crates/folo_ffi" }
folo_utils = { version = "0.1.0", path = "crates/folo_utils" }
linked = { version = "0.1.5", path = "crates/linked" }
linked_macros = { version = "0.1.4", path = "crates/linked_macros" }
linked_macros_impl = { version = "0.1.4", path = "crates/linked_macros_impl" }
many_cpus = { version = "0.2.2", path = "crates/many_cpus" }
many_cpus_benchmarking = { version = "0.1.5", path = "crates/many_cpus_benchmarking" }

# Internal packages we do not publish.
benchmark_utils = { path = "crates/benchmark_utils" }

# The packages we consume. We only enable "std" features here, the rest in individual crates.
arc-swap = { version = "1.7", default-features = false }
axum = { version = "0.8", default-features = false }
# Using Git reference here because the published crate is out of date and lacks proper graph support.
criterion = { version = "0.5", git = "https://github.com/bheisler/criterion.rs.git", default-features = false }
darling = { version = "0.20", default-features = false }
derive_more = { version = "2.0", default-features = false }
fake_headers = { version = "0.0", default-features = false }
foldhash = { version = "0.1", default-features = false, features = ["std"] }
frozen-collections = { version = "0.4", default-features = false }
hash_hasher = { version = "2.0", default-features = false }
http = { version = "1.2", default-features = false }
include-doc = { version = "0.2", default-features = false }
itertools = { version = "0.14", default-features = false, features = [
    "use_std",
] }
libc = { version = "0.2", default-features = false }
mockall = { version = "0.13", default-features = false }
mutants = { version = "0.0.3", default-features = false }
negative-impl = { version = "0.1", default-features = false }
nonempty = { version = "0.11", default-features = false }
oneshot = { version = "0.1", default-features = false, features = ["std"] }
paste = { version = "1.0", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
rand = { version = "0.9", default-features = false, features = ["std"] }
rsevents = { version = "0.3.1", default-features = false }
scc = { version = "2.3", default-features = false }
scopeguard = { version = "1.2", default-features = false }
seq-macro = { version = "0.3", default-features = false }
simple-mermaid = { version = "0.2", default-features = false }
static_assertions = { version = "1", default-features = false }
syn = { version = "2.0", default-features = false }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.43", default-features = false }
windows = { version = "0.61", default-features = false, features = ["std"] }

[workspace.lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
closure_returning_async_block = "warn"
elided_lifetimes_in_paths = "warn"
# Unstable: fuzzy_provenance_casts = "warn"
let_underscore_drop = "warn"
# Unstable: lossy_provenance_casts = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
# Unstable: must_not_suspend = "warn"
trivial_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
# Unstable: unqualified_local_imports = "warn"
unreachable_pub = "warn"
unsafe_attr_outside_unsafe = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_macros = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[workspace.lints.rustdoc]
private_doc_tests = "warn"
unescaped_backticks = "warn"

[workspace.lints.clippy]
absolute_paths = "warn"
allow_attributes_without_reason = "warn"
arithmetic_side_effects = "warn"
as_ptr_cast_mut = "warn"
assertions_on_result_states = "warn"
assigning_clones = "warn"
borrow_as_ptr = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_ptr_alignment = "warn"
cast_sign_loss = "warn"
clone_on_ref_ptr = "warn"
cloned_instead_of_copied = "warn"
cognitive_complexity = "warn"
collection_is_never_read = "warn"
copy_iterator = "warn"
create_dir = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
default_trait_access = "warn"
default_union_representation = "warn"
derive_partial_eq_without_eq = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
empty_drop = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
exit = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
