[package]
name = "benchmarks"
description = "Random pile of benchmarks to explore relevant scenarios and guide Folo development"
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
many_cpus_benchmarking = { path = "../many_cpus_benchmarking" }

criterion = { workspace = true }
fake_headers = { workspace = true }
frozen-collections = { workspace = true }
http = { workspace = true }
scc = { workspace = true }

[[bench]]
name = "variable_access"
harness = false

[[bench]]
name = "effects_of_memory"
harness = false
