[package]
name = "benchmarks"
description = "Random pile of benchmarks to explore relevant scenarios and guide Folo development"
publish = false
version = "0.0.1-never"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
doc = false

[dependencies]
many_cpus_benchmarking = { workspace = true }

criterion = { workspace = true }
fake_headers = { workspace = true }
frozen-collections = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
scc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_System_Memory"] }

[[bench]]
name = "variable_access"
harness = false

[[bench]]
name = "effects_of_memory"
harness = false

[[bench]]
name = "effects_of_memory_windows"
harness = false
