[package]
name = "cpulist"
description = "Parse and emit the Linux 'cpulist' data format used to list processors, memory regions and similar entities"
publish = true

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
itertools = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
