[package]
name = "cpulist"
description = "Parse and emit the Linux 'cpulist' data format used to list processors, memory regions and similar entities"
publish = true
version = "0.2.1"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []

[dependencies]
include-doc = { workspace = true }
itertools = { workspace = true }
new_zealand = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
