[package]
name = "dataless_pool"
description = "A pool that reserves pinned memory without placing any data in it, leaving that up to the owner"
publish = true
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []

[dependencies]
num = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
mutants = { workspace = true }

[lints]
workspace = true
