[package]
name = "folo_hw"
description = "Hardware awareness for Rust apps"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bytes = "1"
itertools = "0.14"
nonempty = "0.11"
rand = "0.8"
windows = { version = "0.58", features = [
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }

[dev-dependencies]
criterion = { version = "0.5" }
