[package]
name = "folo_hw"
description = "Hardware awareness for Rust apps"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
derive_more = { version = "1", features = ["as_ref", "display"] }
itertools = "0.14"
nonempty = "0.11"
rand = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }

[dev-dependencies]
criterion = { version = "0.5" }
frozen-collections = "0.3"
mockall = "0.13"

[[bench]]
name = "cross_memory_region_channels"
harness = false

[[bench]]
name = "cross_memory_region_hashmaps"
harness = false

[[bench]]
name = "cross_memory_region_fzmaps_hash"
harness = false

[[bench]]
name = "cross_memory_region_fzmaps_scalar"
harness = false

[[bench]]
name = "effects_of_memory"
harness = false
