[package]
name = "folo_hw"
description = "Hardware awareness for Rust apps"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
derive_more = { version = "1", features = ["as_ref", "display"] }
itertools = "0.14"
nonempty = "0.11"
rand = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }

[dev-dependencies]
# Using Git reference here because the published crate is out of date and lacks proper graph support.
criterion = { git = "https://github.com/bheisler/criterion.rs.git" }
fake_headers = "0.0"
frozen-collections = "0.3"
http = "1"
mockall = "0.13"

[[bench]]
name = "effects_of_memory"
harness = false
