[package]
name = "folo_state"
description = "State management primitives for high-performance Rust apps"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
folo_hw = { path = "../folo_hw" }

[dev-dependencies]
# Using Git reference here because the published crate is out of date and lacks proper graph support.
criterion = { git = "https://github.com/bheisler/criterion.rs.git" }
mockall = "0.13"
static_assertions = "1"


[[bench]]
name = "region_local"
harness = false
