[package]
name = "folo_utils"
description = "Utilities for internal use in Folo crates; no stable API surface"
publish = true
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
doc = false

[features]
default = []

[dependencies]

[dev-dependencies]
mutants = { workspace = true }

[lints]
workspace = true
