[package]
name = "linked"
description = "Create families of linked objects that can collaborate across threads while being internally single-threaded"
publish = true
version = "0.0.1-pre.1"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.release]
# All the `linked*` crates are published under the same version, as they are
# all the "logically same" crate, just separated for cargotechnical reasons.
shared-version = "linked"
# Changelogs of these two are merged into the `linked` crate as the others are "invisible" crates.
changelog_include = ["linked_macros", "linked_macros_impl"]

[dependencies]
hash_hasher = { workspace = true }
linked_macros = { workspace = true }
negative-impl = { workspace = true }
paste = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
seq-macro = { workspace = true }

[[bench]]
name = "linked"
harness = false
