[package]
name = "linked"
description = "Create families of linked objects that can collaborate across threads while being internally single-threaded"
publish = true
version = "0.0.4"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hash_hasher = { workspace = true }
linked_macros = { workspace = true }
negative-impl = { workspace = true }
paste = { workspace = true }
simple-mermaid = { workspace = true }

[dev-dependencies]
benchmark_utils = { workspace = true }
criterion = { workspace = true }
many_cpus = { workspace = true }
mutants = { workspace = true }
seq-macro = { workspace = true }

[[bench]]
name = "per_access_static"
harness = false

[[bench]]
name = "per_thread_static"
harness = false

[[bench]]
name = "per_thread"
harness = false
