[package]
name = "linked_macros"
description = "Internal dependency of the 'linked' crate - do not reference directly"
publish = true
version = "0.0.1-pre.1"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[package.metadata.release]
# All the `linked*` crates are published under the same version, as they are
# all the "logically same" crate, just separated for cargotechnical reasons.
shared-version = "linked"

[dependencies]
linked_macros_impl = { workspace = true }

[dev-dependencies]
