[package]
name = "linked_macros"
description = "Internal dependency of the 'linked' crate - do not reference directly"
publish = true
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true
doc = false

[dependencies]
linked_macros_impl = { workspace = true }

[dev-dependencies]
