[package]
name = "linked_macros"
description = "Internal dependency of the 'linked' crate - do not reference directly"
publish = true
version = "0.2.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true
doc = false

[package.metadata.cargo-machete]
ignored = ["proc-macro2"]

[dependencies]
linked_macros_impl = { workspace = true }
proc-macro2 = { workspace = true, features = ["proc-macro"] }

[dev-dependencies]

[lints]
workspace = true
