[package]
name = "linked_macros_impl"
description = "Internal dependency of the 'linked_macros' crate - do not reference directly"
publish = true

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "parsing", "extra-traits"] }

[dev-dependencies]
