[package]
name = "linked_macros_impl"
description = "Internal dependency of the 'linked_macros' crate - do not reference directly"
publish = true
version = "0.0.1-pre.1"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.release]
# All the `linked*` crates are published under the same version, as they are
# all the "logically same" crate, just separated for cargotechnical reasons.
shared-version = "linked"
# This crate is invisible, changes are recorded in `linked` changelog instead.
changelog_update = false

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "parsing", "extra-traits"] }

[dev-dependencies]
