[package]
name = "many_cpus"
description = "Efficiently schedule work and inspect the hardware environment on many-processor systems"
publish = true
version = "0.0.1"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["as_ref", "display"] }
itertools = { workspace = true }
nonempty = { workspace = true }
rand = { workspace = true }

[target.'cfg(unix)'.dependencies]
cpulist = { workspace = true }
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_System_JobObjects",
    "Win32_System_Kernel",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }

[dev-dependencies]
cpulist = { workspace = true }
# Using Git reference here because the published crate is out of date and lacks proper graph support.
criterion = { workspace = true }
mockall = { workspace = true }
scopeguard = { workspace = true }
static_assertions = { workspace = true }

[target.'cfg(windows)'.dev-dependencies]
windows = { workspace = true, features = ["Win32_Security"] }

[[bench]]
name = "hardware_info"
harness = false

[[bench]]
name = "hardware_tracker"
harness = false

[[bench]]
name = "processor_set_builder"
harness = false