[package]
name = "many_cpus_benchmarking"
description = "Criterion benchmark harness to easily compare different processor configurations"
publish = true
version = "0.0.1"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cpulist = { path = "../cpulist" }
many_cpus = { path = "../many_cpus" }

criterion = { workspace = true }
derive_more = { workspace = true, features = ["display"] }
itertools = { workspace = true }
nonempty = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "many_cpus_harness_demo"
harness = false
