[package]
name = "many_cpus_benchmarking"
description = "Criterion benchmark harness to easily compare different processor configurations"
publish = true
version = "0.1.6"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []

[dependencies]
cpulist = { workspace = true }
criterion = { workspace = true }
derive_more = { workspace = true, features = ["display"] }
folo_utils = { workspace = true }
itertools = { workspace = true }
many_cpus = { workspace = true }
nonempty = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
mutants = { workspace = true }

[[bench]]
name = "many_cpus_harness_demo"
harness = false

[lints]
workspace = true
