[package]
name = "new_zealand"
description = "Utilities for working with non-zero integers"
publish = true
version = "0.1.2"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
doc = false

[features]
default = []

[dependencies]

[dev-dependencies]

[lints]
workspace = true
